--- a/frontend/content/posts/travel/0520.md
+++ b/frontend/content/posts/travel/0520.md
@@ -74,7 +74,7 @@ cover:
 
 晚饭后，第一次来到国家图书馆。上学期一门关于图书馆的课我没有选，当时的老师带那节课的学生去参观了这个国家图书馆。今天我也终于来了！
 
-<div align=center><img src="/posts/travel/0520/library-outside.jpg" style="width: 60%; height:auto;" alt="砂锅店"></div>
+<div align=center><img src="/posts/travel/0520/library-outside.jpg" style="width: 60%; height:auto;" alt="图书馆"></div>
 
 一楼大厅有一个关于巴厘岛的画展，还有一台钢琴，可供自由弹奏。有一位中年男士正在弹琴，我就在优雅的氛围中欣赏起画展。一进入图书馆，整个人都变高雅了。Let's 艺术。
 
