Bear fadein + finish 0522 article

--- a/frontend/content/posts/travel/0522.md
+++ b/frontend/content/posts/travel/0522.md
@@ -28,19 +28,57 @@ cover:
     relative: false
 ---
 
-这一天，又是从卖二手开始。有一位同学要买走我剩下的咖啡和茶，打包20新币全部出给她，其中包括了我猛喝还没喝完的咖啡伴侣和脱咖啡因冻干粉，还有我最爱的高山乌龙茶，从JP思家客买回的很香的一罐苦荞茶，以及从马来西亚带回来的橙子茶——都出掉吧！我自己也是喝不完的，何必不舍。
+这一天，又是从卖二手开始。有一位同学要买走我剩下的咖啡和茶，打包20新币全部出给她，其中包括了我猛喝还没喝完的咖啡伴侣和脱咖啡因冻干粉，还有我最爱的高山乌龙茶、从JP思家客买回的很香的一罐苦荞茶，以及从马来西亚带回来的橙子茶——都出掉吧！我自己也是喝不完的，何必不舍。
 
-在李伟南图书馆前的旋转楼梯交接后，坐上公交又去了 JP 商场。这次吃了一直路过但没尝试过的店铺，Wing Stop，吃鸡翅的店。某次路过 Clementi 商场，见三楼中庭这家店人气火爆，开放式座位坐满了本地青年，戴着手套欢乐地啃鸡翅聊天；还经常在 JP 看到这家店是排队状态，于是好奇到底是什么口味。在网上查了攻略，选择柠檬胡椒与另一种本地特色口味（有点像炸鱼汤米粉里的炸蒜末味）。还可以选择一种酱料，我选的是 Ranch，是一种介于沙拉酱和酸奶酱之间的口感，偏咸。套餐内还有薯条与气泡饮料一杯。
+在李伟南图书馆前的旋转楼梯交接后，我坐上公交又去了 JP 商场。这次吃了一直路过但没尝试过的店铺，Wing Stop，吃鸡翅的店。某次路过 Clementi 商场，见三楼中庭这家店人气火爆，开放式座位坐满了本地青年，戴着手套欢乐地啃鸡翅聊天；还经常在 JP 看到这家店要排队，于是好奇到底是什么味道。在网上查了攻略，选择柠檬胡椒与另一种本地特色口味（有点像炸鱼汤米粉里的炸蒜末味）。还可以选择一种酱料，我选的是 Ranch，是一种介于沙拉酱和酸奶酱之间的口感，偏咸。套餐内还有薯条与气泡饮料一杯。
 
 <figure>
   <div align=center><img src="/posts/travel/0522/wing-stop.jpg"  style="width: 60%; height:auto;" alt="炸鸡块套餐"></div>
   <figcaption>炸鸡块套餐</figcaption>
 </figure>
 
-这是我第一次走进店铺里面，发现里面还有不少座位，之前一直以为那么小的门头应该是仅供外带。选择了一个靠近窗口的位置，开始啃鸡肉。店里用餐的大多是年轻人，旁边似乎有一桌中学生。鸡块的味道还不错，份量也足，在没有碳水主食的情况下也吃得很饱。
+这是我第一次走进店铺，发现里面还有不少座位，之前一直以为那么小的门头应该是仅供外带。选择了一个靠近窗口的位置，开始啃鸡肉。店里用餐的大多是年轻人，旁边似乎是一桌中学生。鸡块的味道还不错，份量也足，在没有碳水主食的情况下也吃得很饱。
 
-这一天的行程是去参观达士岭组屋的观景台。在网上查到攻略，门票 6 新币只能用现金买，于是吃完鸡块后，走去地铁站里的 POSB 提款机，提出了 20 元新币现金。好复古的体验，好久没有为了买某样东西专门去取这么一点现金了。
+这一天的行程是去参观达士岭组屋（The Pinnacle@Duxton）的观景台。在网上查到攻略，门票 6 新币只能用现金买，于是吃完鸡块后，我走去地铁站里的 POSB 提款机，提出了两张 10 元新币现金（最低提款金额）。好复古的体验，好久没有为了买某样东西专门去取这么一点现金了。
 
-坐地铁来到欧南园（Outram Park）站，出站后有一个大大的斜坡，要向上爬坡去往达士岭。在十字路口等红灯的时候，看到路边一只灰色野鸡妈妈带着几个小崽崽，在马路边徘徊犹豫，似乎是想过马路但又害怕车流。此时一位欧美面孔的女士挺身而出，在人行道绿灯期间，做出护送的架势，用嘬嘬嘬和手势带领小鸡们成功穿过马路。几乎无人侧目，似乎这是一种常态，小动物和人和谐共处没什么好意外的，关心小动物也不会被视为多管闲事。
+坐地铁来到欧南园（Outram Park）站，出站后有一个大大的斜坡，要向上爬坡去往达士岭。在十字路口等红灯的时候，看到路边一只灰色野鸡妈妈带着几个小崽崽，在马路边徘徊犹豫，似乎是想过马路但又害怕车流。此时一位欧美面孔的女士挺身而出，在人行道绿灯期间，做出护送的架势，用嘬嘬嘬声和手势带领小鸡们成功穿过马路。几乎无人侧目，似乎这是一种常态，小动物和人和谐共处没什么好意外的，关心小动物也不会被视为多管闲事。
 
-来到达士岭组屋楼下售票处，自信满满掏出我的 10 元纸币，被告知不设找零，天都塌了。还好门口有一家咖啡铺，买了一杯无糖热奶茶，破开了 10 元，得以边喝奶茶边赏景色。
+来到达士岭组屋楼下售票处，自信满满掏出我的 10 元纸币，被告知不设找零。还好门口有一家咖啡铺，买了一杯无糖热奶茶，破开了 10 元零钱，还能边喝奶茶边赏景色。
+
+<figure>
+  <div align=center><img src="/posts/travel/0522/sunset.jpg"  style="width: 60%; height:auto;" alt=""></div>
+  <figcaption>第一眼风景</figcaption>
+</figure>
+
+太阳已经落山，只有远处还剩一点余晖，天空已经变成深蓝色。不远处是海港，能看到货运船只在忙碌。与周围密密麻麻的高楼相比，海港前面有一大片空地，似乎是船只装卸货的地方，现在被暖黄色的灯光铺满。走到观景走廊的对面，往城市内陆的方向看，能看到那些有名的高楼——红色楼顶、被绿植覆盖的 Oasia Hotel，牛车水的珍珠坊大厦，还有远处的 OCBC 和中国银行大楼。
+
+<figure>
+  <div align=center><img src="/posts/travel/0522/harbour.jpg"  style="width: 80%; height:auto;" alt=""></div>
+  <figcaption>海港</figcaption>
+</figure>
+
+观光走廊是一个环形，可以在楼顶围着走一周，这三栋居民楼是连接在一起的，因此走廊大概有几百米的周长。有居民在走廊跑步，还有一群像是户外运动快闪的人在楼顶组团锻炼。走道旁边有长椅，我顺势躺下，看着天空一点点变黑。
+
+<figure>
+  <div align=center><img src="/posts/travel/0522/couch.jpg"  style="width: 70%; height:auto;" alt=""></div>
+  <figcaption>躺椅</figcaption>
+</figure>
+
+<figure>
+  <div align=center><img src="/posts/travel/0522/nightview.jpg"  style="width: 80%; height:auto;" alt=""></div>
+  <figcaption>楼宇夜景</figcaption>
+</figure>
+
+起身后，又在这个环形走廊里走走逛逛，差点在另一处座椅把眼镜落在了小矮桌上。在某个夹角处，我能同时看到海港和左侧那栋住宅楼，有一对情侣（或是夫妻）正探出身子在小阳台上看风景。两侧的住宅灯光逐渐变多，是人们渐渐到家了；楼顶的行人也越来越少，游客也离开了。此时我还站在楼顶，有些无所适从。我算游客吗？来坡一年，我似乎已经逐渐习惯这里，官方身份上我属于“resident”，我还暂时拥有学校的一间小屋，是我在此地能称作“回家”的地方；但不到十天后我又要离开，长期签证也即将失效，以后再来，就是游客了，而此时此刻我也做着跟游客无异的事——买票参观高楼。即将离别的不舍就这样涌上心头，尽管真正离岛起飞的那一刻发生在十几天后，但坐电梯下楼离开观景台的时候，我感觉我已经完成了告别的一部分。
+
+走出居民楼外的街道，有几个女中学生骑着自行车跟朋友玩闹着；再走远些是一条有情调的小酒吧街，有不少下班族在这里休闲享受夜晚。我路过一间收藏过的餐吧，想着什么时候有空再来吃吧（最后直到离岛也没去）。回到宿舍，喝了草莓味的真露烧酒，把自己蒙晕睡去。
+
+<figure>
+  <div align=center><img src="/posts/travel/0522/duxton.jpg"  style="width: 80%; height:auto;" alt=""></div>
+  <figcaption>达士岭组屋全景</figcaption>
+</figure>
+
+<figure>
+  <div align=center><img src="/posts/travel/0522/barstreet.jpg"  style="width: 60%; height:auto;" alt=""></div>
+  <figcaption>小酒吧街</figcaption>
+</figure>
